# real-time-crypto-predictor

./: .gitignore  README.md
docker-compose/: feature_pipeline.yml
services/kafka_to_feature_store/: Dockerfile  Makefile  README.md  pyproject.toml
services/kafka_to_feature_store/src/: config.py  hopsworks_api.py  main.py
services/trade_producer/: Makefile  README.MD  pyproject.toml
services/trade_producer/docker-compose/: redpanda.yml
services/trade_producer/src/: .sample.env  config.py  kraken_api.py  main.py
services/trade_producer/src/kraken_api/: rest.py  websocket.py
services/trade_to_ohlc/: Dockerfile  Makefile  README.md  pyproject.toml
services/trade_to_ohlc/src/: config.py  main.py
