[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["max-mcd <max-mcd@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
quixstreams = "^2.5.1"
websocket-client = "^1.8.0"
logger = "^1.4"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
